@@ -274,9 +274,9 @@ class CategoriesViewGtk(gtk.ScrolledWindow, CategoriesView):
             # sanitize text so its pango friendly...
             name = gobject.markup_escape_text(cat.name.strip())
 
-            cat_btn = CategoryButton(name,
-                                     icon_name=cat.iconname,
-                                     icon_size=gtk.ICON_SIZE_LARGE_TOOLBAR)
+            cat_btn = SubcategoryButton(name,
+                                        icon_name=cat.iconname,
+                                        icon_size=gtk.ICON_SIZE_DIALOG)
 
             cat_btn.connect('clicked', self._on_category_clicked, cat)
             # append the department to the departments widget
@@ -284,9 +284,9 @@ class CategoriesViewGtk(gtk.ScrolledWindow, CategoriesView):
 
         # append an additional button to show all of the items in the category
         name = gobject.markup_escape_text(_("All %s") % num_items)
-        show_all_btn = CategoryButton(name, 
-                                      icon_name="go-next",
-                                      icon_size= gtk.ICON_SIZE_LARGE_TOOLBAR)
+        show_all_btn = SubcategoryButton(name, 
+                                         icon_name="go-next",
+                                         icon_size= gtk.ICON_SIZE_DIALOG)
         show_all_btn.connect('clicked', self._on_show_all_clicked)
         self.departments.append(show_all_btn)
 
@@ -715,6 +715,14 @@ class CategoryButton(mkit.HButton):
         self.set_has_action_arrow(True)
         self.set_internal_xalignment(0.0)    # basically justify-left
         self.set_internal_spacing(mkit.SPACING_LARGE)
+        self.set_border_width(mkit.BORDER_WIDTH_MED)
+        return
+        
+class SubcategoryButton(mkit.VButton):
+
+    def __init__(self, markup, icon_name, icon_size):
+        mkit.VButton.__init__(self, markup, icon_name, icon_size)
+        self.set_relief(gtk.RELIEF_NONE)
         self.set_border_width(mkit.BORDER_WIDTH_MED)
         return
 
