@@ -23,6 +23,9 @@ software-center (2.1.4) UNRELEASED; urgency=low
   * merge lp:~mmcg069/software-center/catview-conform-w-spec:
     fixes subcategory screen bug (LP: #598498), thanks Matthew
     McGowan!
+  * softwarecenter/view/catview_gtk.py:
+    - use large icons in single-pane department screen per
+      the spec
 
   [ Michael Vogt ]
   * mergedp:~arky/ubuntu/maverick/software-center/fixes-595500:
@@ -39,7 +42,7 @@ software-center (2.1.4) UNRELEASED; urgency=low
   * merged lp:~mvo/software-center/update-from-var-lib-apt-lists
     to support meta-data in deb822 format in /var/lib/apt/lists
 
- -- Gary Lasker <gary.lasker@canonical.com>  Sun, 27 Jun 2010 12:28:58 -0400
+ -- Gary Lasker <gary.lasker@canonical.com>  Tue, 29 Jun 2010 01:22:18 -0400
 
 software-center (2.1.3) maverick; urgency=low
 
